# Conecta-SENAI

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  UX-REVIEW.md  add_footer_menu.py  add_help_menu.py  docker-entrypoint.sh  expand_ajuda.py  fix_buttons.py  gunicorn.conf.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  migrations.yml
Conecta-SENAI-main/: CHANGELOG.md  README.md
Conecta-SENAI-main/src/: auth.py  limiter.py  redis_client.py
Conecta-SENAI-main/tests/: test_instrutor_routes.py  test_ocupacao.py  test_turma_routes.py
app/: __init__.py  auth.py  extensions.py
app/planejamento/: __init__.py  api.py  forms.py  models.py  routes.py
app/templates/: base.html
apps/api/: .dockerignore  (+4 more)
conecta_senai/: __init__.py
docs/: MONOREPO_DECISIONS.md  design-system.md
infra/: docker-compose.yml
migrations/: env.py
scripts/: auto_migrate.sh  seed_chamados.py  seed_planejamento.py
src/: __init__.py  auth.py  cache.py  config.py  database.py  extensions.py  limiter.py  logging_conf.py  main.py  redis_client.py  scheduler.py  tasks.py  telemetry.py
templates/: ajuda.html  selecao-sistema.html
tests/: conftest.py  test_agendamento_routes.py  test_apontamento.py  test_app_factory.py  test_audit_logs.py  test_auth_reset.py  test_basedados_horario.py  test_centro_custo.py  test_convocacao_route.py  test_email_service.py  test_export_routes.py  test_horario_routes.py  test_instrutor_routes.py  test_noticia_repository.py  test_noticia_schemas.py  test_noticia_service.py  test_noticias_calendar.py  test_noticias_routes.py  test_ocupacao.py  test_password_validation.py  test_planejamento.py  test_planejamento_api.py  test_planejamentos_routes.py  test_rateio.py  test_rateio_logs.py  test_rateio_routes.py  test_sala_routes.py  test_secretaria_treinamentos_routes.py  test_suporte_visitante_routes.py  test_support_routes.py  test_treinamento_emails.py  test_treinamento_routes.py  test_treinamentos_planejamento.py  test_turma_notifications.py  test_user_routes.py  test_utils.py
(+604 files in other folders)
