[project]
name = "agenda-senai"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "flask (==2.3.3)",
    "flask-sqlalchemy (==3.1.1)",
    "sqlalchemy (==2.0.23)",
    "werkzeug (==2.3.7)",
    "python-dotenv (==1.0.0)",
    "pymysql (==1.1.0)",
    "psycopg2-binary (==2.9.10)",
    "cryptography (==41.0.4)",
    "gunicorn (==23.0.0)",
    "pyjwt (==2.10.1)",
    "reportlab (==4.0.8)",
    "openpyxl (==3.1.2)",
    "pydantic (==2.5.3)",
    "email-validator (==2.2.0)",
    "redis (==5.0.1)",
    "flask-limiter (==3.12)",
    "flask-migrate (==4.0.5)",
    "flask-jwt-extended (==4.6.0)"
]

[tool.poetry]
name = "agenda-senai"
version = "0.1.0"
description = "Agenda de laborat\u00f3rios e salas do SENAI"
authors = ["Codex <codex@openai.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4"
flask = "2.3.3"
flask-sqlalchemy = "3.1.1"
sqlalchemy = "2.0.23"
werkzeug = "2.3.7"
python-dotenv = "1.0.0"
pymysql = "1.1.0"
psycopg2-binary = "2.9.10"
cryptography = "41.0.4"
gunicorn = "23.0.0"
pyjwt = "2.10.1"
reportlab = "4.0.8"
openpyxl = "3.1.2"
pydantic = "2.5.3"
email-validator = "2.2.0"
redis = "5.0.1"
flask-limiter = "3.12"
flask-migrate = "4.0.5"
flask-jwt-extended = "4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
