[tool.poetry]
name = "conectasenai-monorepo"
version = "0.1.0"
description = "Monorepositório do Conecta-SENAI"
authors = ["Codex <codex@openai.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
conectasenai-common = { path = "packages/common", develop = true }
conectasenai-api = { path = "apps/api", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
